[tool.poetry]
name = "probe-lens"
version = "0.1.0"
description = ""
authors = ["Sharan Yalburgi <sharanyalburgi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"
torch = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
