[tool.poetry]
name = "probe-lens"
version = "0.1.0"
description = ""
authors = ["Sharan Yalburgi <sharanyalburgi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"
torch = "^2.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pyright = "^1.1.370"
pre-commit = "^3.7.1"
ipykernel = "^6.29.5"
nnsight = "^0.2.21"
syrupy = "^4.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["dist", "docs"]

[tool.ruff.lint]
ignore = ["E203", "E501", "E731"]
extend-select = ["UP", "TID", "I", "F", "E", "ARG"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"
"tqdm._tqdm".msg = "Use `from tqdm.autonotebook import tqdm` instead"
"tqdm.tqdm".msg = "Use `from tqdm.autonotebook import tqdm` instead"

[tool.pyright]
typeCheckingMode = "standard"